bug 938025 - part 1 - get rid of some static constructors r=bz r=bjacob